2007-01-30  Ilya Kharmatsky <ilyak -at- mainsoft.com>

	* Socket.jvm.cs: additional stubs for net_2_0 properties,
	bug fixes (EnsureStillUsable method inserted)

2007-01-28  Ilya Kharmatsky <ilyak -at- mainsoft.com>

	* Socket.jvm.cs: added stubs for net_2_0 properties and methods.

2007-01-26  Dick Porter  <dick@ximian.com>

	* Socket.cs: SupportsIPv6 is obsolete in the 2.0 profile.  Stub
	out BeginReceiveMessageFrom(), BeginSendFile(),
	EndReceiveMessageFrom(), EndSendFile(), ReceiveMessageFrom(), and
	SendFile().

	* IPPacketInformation.cs: New in the 2.0 profile

	* SocketFlags.cs: Remove useless (and empty) inline documentation,
	and add 2.0 items.

	* TcpListener.cs: Mark Server as public in the 2.0 profile.

	* UdpClient.cs: Mark Dispose(bool) as protected in the 2.0
	profile.

	System.Net.Sockets should now be 2.0-complete.

2007-01-26  Dick Porter  <dick@ximian.com>

	* Socket.cs: There's no point checking the SO_ERROR status of a
	socket after poll() or select() if we already know that connected
	== true.

2007-01-24  Dick Porter  <dick@ximian.com>

	* IOControlCode.cs: 
	* SocketInformationOptions.cs: 
	* TransmitFileOptions.cs: Fix enum values

	* AddressFamily.cs: Not Serializable in the 2.0 profile

2007-01-24  Dick Porter  <dick@ximian.com>

	* NetworkStream.cs: 2.0 profile updates, based on a patch by
	Sridhar Kulkarni (sridharkulkarni@gmail.com)

2007-01-23  Dick Porter  <dick@ximian.com>

	* TcpListener.cs: 
	* TcpClient.cs: 2.0 profile updates, based on a patch by Sridhar
	Kulkarni (sridharkulkarni@gmail.com)

2007-01-22  Miguel de Icaza  <miguel@novell.com>

	* Socket.cs: Move the throw new NotImplementedException ()
	elsewhere to prevent Moma reports.

2007-01-20  Dick Porter  <dick@ximian.com>

	* Socket.cs(SocketDefaults): Catch and ignore any SocketExceptions
	thrown from setting default socket options - some platforms might
	not support a particular default we're trying to set.

2007-01-11  Dick Porter  <dick@ximian.com>
