@@ -1,3 +1,9 @@
+2007-03-11  Gert Driesen  <drieseng@users.sourceforge.net>
+
+	* TcpClient.cs: Do not initialize network stream in Connect. In
+	Dispose, only nullify client if network stream was not obtained.
+	Fixes bug #81105.
+
 2007-01-30  Ilya Kharmatsky <ilyak -at- mainsoft.com>
 
 	* Socket.jvm.cs: additional stubs for net_2_0 properties,
